--- a/WikipediaTrafficAnalysis/.project
+++ b/WikipediaTrafficAnalysis/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WikipediaTopCategory</name>
+	<name>WikipediaTrafficAnalysis</name>
 	<comment></comment>
 	<projects>
 	</projects>
