--- a/ImageDeduplicator_EXIF/.project
+++ b/ImageDeduplicator_EXIF/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ImageDeduplicator</name>
+	<name>ImageDeduplicator_EXIF</name>
 	<comment></comment>
 	<projects>
 	</projects>
